# Gait-Tracking-With-x-IMU

Gait Tracking With x-IMU/: AHRS.m  Script.m
common/: CMakeLists.txt  RosbagReader.hpp
common/test/: test_RosbagReader.cpp
x-IMU_python/: AHRS.py  QuaternionsCALC.py  RosBagExtractor.py  Script.py  Script_zupt.py  Script_zupt_l515.py
x-IMU_python/Datasets/: spiralStairs_CalInertialAndMag.csv  straightLine_CalInertialAndMag.csv
x-IMU_python/ximu_python_library/: bandpass.py  xIMUdataClass.py
